# rust-orderbook-feed

./: .gitignore  Cargo.toml  LICENSE  README.md  RUNBOOK.md
src/: checksum.rs  feed.rs  main.rs  metrics.rs  orderbook.rs  replay.rs
src/exchanges/: binance.rs  coinbase.rs  kraken.rs  mod.rs
tests/fixtures/: binance_btcusdt_deltas.jsonl  binance_btcusdt_snapshot.json  coinbase_btcusd.jsonl  kraken_btcusd_book.jsonl  kraken_btcusd_instrument.json
